Archive2/4f/86eaa5ceb8cc17/main.cpp
#include<iostream>
constexpr void foo() { std::cout << "Hello"; return; }

int main() 
{
    foo();
}
